Early changes for SPECPROC-41 - Add Decision Support Language

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -17,25 +17,25 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/dlom.html#_dl_block_class[DL_BLOCK^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_case_branch_class[DL_CASE_BRANCH^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_case_group_class[DL_CASE_GROUP^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_case_rule_class[DL_CASE_RULE^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_branch_class[DL_CONDITION_BRANCH^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_chain_class[DL_CONDITION_CHAIN^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_def_class[DL_CONDITION_DEF^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_condition_rule_class[DL_CONDITION_RULE^]
-[.xcode]
 * link:/releases/PROC/{proc_release}/dlom.html#_dl_procedure_call_class[DL_PROCEDURE_CALL^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/dlom.html#_dl_rule_class[DL_RULE^]
-[.xcode]
 * link:/releases/PROC/{proc_release}/dlom.html#_dl_statement_class[DL_STATEMENT^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_case_branch_class[DS_CASE_BRANCH^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_case_group_class[DS_CASE_GROUP^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_case_rule_class[DS_CASE_RULE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_condition_branch_class[DS_CONDITION_BRANCH^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_condition_chain_class[DS_CONDITION_CHAIN^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_condition_def_class[DS_CONDITION_DEF^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_condition_rule_class[DS_CONDITION_RULE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/dlom.html#_ds_rule_class[DS_RULE^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/dlom.html#_pl_assertion_class[PL_ASSERTION^]
 [.xcode]
