--- a/docs/UML/classes/ds_condition_chain.adoc
+++ b/docs/UML/classes/ds_condition_chain.adoc
@@ -1,9 +1,9 @@
-=== DL_CONDITION_CHAIN Class
+=== DS_CONDITION_CHAIN Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*DL_CONDITION_CHAIN*
+2+^h|*DS_CONDITION_CHAIN*
 
 h|*Description*
 2+a|Rule type that returns a result based on one or more conditions.
@@ -16,7 +16,7 @@ h|*Attributes*
 ^h|*Meaning*
 
 h|*1..1*
-|*items*: `List<DL_CONDITION_BRANCH>`
+|*items*: `List<DS_CONDITION_BRANCH>`
 a|Items in the chain.
 
 h|*0..1*
