--- a/docs/UML/classes/decision_module.adoc
+++ b/docs/UML/classes/decision_module.adoc
@@ -1,26 +1,26 @@
-=== DL_MODULE Class
+=== DECISION_MODULE Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*DL_MODULE*
+2+^h|*DECISION_MODULE*
 
 h|*Description*
 2+a|A container for a set of statements along with related BMM definitions, meta-data, terminology and bindings.
 
 h|*Inherit*
-2+|`MODULE`
+2+|`BMM_MODULE`, `AUTHORED_RESOURCE`
 
 h|*Attributes*
 ^h|*Signature*
 ^h|*Meaning*
 
 h|*0..1*
-|*conditions*: `List<DL_CONDITION_DEF>`
+|*conditions*: `List<DS_CONDITION_DEF>`
 a|Boolean conditions defined by module for use in rules.
 
 h|*0..1*
-|*rules*: `List<DL_RULE>`
+|*rules*: `List<DS_RULE>`
 a|Ruleset consisting of rules of various types.
 
 h|*0..1*
@@ -30,11 +30,15 @@ a|Properties representing real-world objects, such as the patient state, the pat
 h|*0..1*
 |*proxy_objects*: `List<PROXY_MODULE>`
 a|Imported proxy modules
+
+h|*0..1*
+|*definitions*: `List<BMM_CONSTANT>`
+a|Constant definitions needed by module.
 h|*Functions*
 ^h|*Signature*
 ^h|*Meaning*
 
-h|
+h|*0..1*
 |*create_bmm_class*
 a|Generate a `BMM_CLASS` structure in which:
 
