--- a/docs/UML/classes/ds_case_rule.adoc
+++ b/docs/UML/classes/ds_case_rule.adoc
@@ -1,15 +1,15 @@
-=== DL_CASE_RULE Class
+=== DS_CASE_RULE Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*DL_CASE_RULE*
+2+^h|*DS_CASE_RULE*
 
 h|*Description*
 2+a|A case rule.
 
 h|*Inherit*
-2+|`DL_RULE`
+2+|`DS_RULE`
 
 h|*Attributes*
 ^h|*Signature*
@@ -17,6 +17,6 @@ h|*Attributes*
 
 h|*1..1 +
 (redefined)*
-|*body*: `DL_CASE_GROUP`
+|*body*: `DS_CASE_GROUP`
 a|The body of the rule.
 |===
