--- a/docs/UML/classes/ds_condition_def.adoc
+++ b/docs/UML/classes/ds_condition_def.adoc
@@ -1,9 +1,9 @@
-=== DL_CONDITION_DEF Class
+=== DS_CONDITION_DEF Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*DL_CONDITION_DEF*
+2+^h|*DS_CONDITION_DEF*
 
 h|*Description*
 2+a|DL representation of an argumentless Boolean function that defines a condition.
