--- a/docs/decision_language/master08-full_example.adoc
+++ b/docs/decision_language/master08-full_example.adoc
@@ -122,9 +122,10 @@ rules
     amniotic_fluid_risk: Terminology_term
         Result <- 
             map P.hypertension_state
-                {44223004|premature rupture|, 86203003|polyhydramnios|} -> |obstetric emergency|9999
-                {59566000|oligohydramnios|}                             -> |refer high risk care|1111
-                {*}                                                     -> |normal|0000
+                {44223004|premature rupture|, 
+                 86203003|polyhydramnios|}      -> |obstetric emergency|9999
+                {59566000|oligohydramnios|}     -> |refer high risk care|1111
+                {*}                             -> |normal|0000
     
     hypertension_risk: Terminology_term
         if P.has_pre_eclampsia or P.has_eclampsia
@@ -146,9 +147,10 @@ rules
     anaemia_risk: Terminology_term
         Result <- 
             map P.anaemia_type
-                {[27342004|anaemia of pregnancy|], |severe|}    -> |obstetric emergency|9999
-                {[27342004|anaemia of pregnancy|]}              -> |refer high risk care|1111
-                {*}                                             -> |normal|0000
+                {27342004|anaemia of pregnancy|, 
+                 |severe|}                          -> |obstetric emergency|9999
+                {27342004|anaemia of pregnancy|}    -> |refer high risk care|1111
+                {*}                                 -> |normal|0000
     
     
 ----
