--- a/docs/UML/classes/condition_branch.adoc
+++ b/docs/UML/classes/condition_branch.adoc
@@ -16,12 +16,9 @@ h|*Attributes*
 ^h|*Meaning*
 
 h|*1..1*
-|*condition*: `EL_SCOPED_REF`
+|*condition*: `BOOLEAN_CONTEXT_EXPRESSION`
 a|Boolean-valued test expression which if True indicates that this Branch is to be followed during execution.
 
 h|*Invariants*
-2+a|_Inv_boolean_condition_: `condition.is_boolean()`
-
-h|
 2+a|_Inv_no_wait_condition_: `wait_spec = Void`
 |===
