--- a/docs/task_planning/master06-7-definition_conditional.adoc
+++ b/docs/task_planning/master06-7-definition_conditional.adoc
@@ -8,7 +8,7 @@ Most Task Plans include decision structures, in which one of multiple branches m
 .proc.task_planning.choice package - decision structures
 image::{uml_diagrams_uri}/PROC-task_planning.definition-decision.svg[id=proc_task_planning_definition_decision, align="center"]
 
-The `CHOICE_GROUP` class defines the essential semantics for all conditional structure types, which is that they conform to a parallel, XOR-logic (i.e. single path) concurrency model, as indicated by the class invariants. In traditional workflow processing, any instance of a `CHOICE_GROUP` is thus logically an XOR gate.
+The `CHOICE_GROUP` class defines the essential semantics for all conditional structure types, which is that they conform to a parallel (`_execution_type_` is constrained to `parallel`), XOR-logic (i.e. single path) concurrency model, as indicated by the class invariants. In traditional workflow processing, any instance of a `CHOICE_GROUP` is thus logically an XOR gate.
 
 The specific sub-types are based on the design principles <<_conditional_structures,described earlier>>, which distinguished both different conditional structural types, and three different levels of system support, i.e. 'automated', 'decision support' and 'ad hoc'. The combination of structural types and levels of system/user interaction levels is realised in terms of variations on the `CHOICE_GROUP` and `CHOICE_BRANCH` classes shown above, which define a generic notion of a decision point from which multiple branches emanate. The variations in system support manifest as follows.
 
@@ -22,7 +22,7 @@ The three fully defined decision patterns are described below.
 
 === Condition Group (if/elseif/else chain)
 
-The first is a structure in which a set of Task Groups are treated as separate branches from a common point in the Plan. Each branch is entered conditionally according to the Boolean expression included on the branch. The classes `CONDITION_GROUP` and `CONDITION_BRANCH` provide this structure, which is  equivalent to an if/then/else structure in a programming language. Semantically, the branches are evaluated in order, in the manner of an if/then/else structure, and the final member may be a catch-all branch that matches if nothing else does. Accordingly, the `_execution_type_` is constrained to `sequential`.
+The first is a structure in which a set of Task Groups are treated as separate branches from a common point in the Plan. Each branch is entered conditionally according to the Boolean expression included on the branch. The classes `CONDITION_GROUP` and `CONDITION_BRANCH` provide this structure, which is  equivalent to an if/then/else structure in a programming language. At execution time, the branches are evaluated in order, in the manner of an if/then/else structure. A final 'else' branch, represented by the `CONDITION_GROUP._else_branch_` attribute must always be present to ensure a catch-all processing path is available.
 
 The following diagram shows a typical condition structure.
 
@@ -32,7 +32,7 @@ image::{diagrams_uri}/condition_structure.svg[id=condition_structure, align="cen
 
 === Decision Group (case)
 
-The second pattern corresponds to a decision point in a workflow at which some expression is evaluated, and each outgoing branch corresponds to a sub-set of the expression's value range (`_value_constraint_` attribute). The classes `DECISION_GROUP` and `DECISION_BRANCH` provide this structure, which is  equivalent to a switch statement in a programming language. The branch sub-ranges should ideally be individually mutually exclusive, and collectively they should cover the entire value range of the expression. However, as with the Condition Group, the branches are processed in order stated in the definition (`_execution_type_` is constrained to `sequential`), which enables overlapping value constraints on the branches, and also a final catch-all 'else' branch, if needed. The latter would have an open value constraint of the correct type.
+The second pattern corresponds to a decision point in a workflow at which some expression is evaluated, and each outgoing branch corresponds to a sub-set of the expression's value range (`_value_constraint_` attribute). The classes `DECISION_GROUP` and `DECISION_BRANCH` provide this structure, which is  equivalent to a switch statement in a programming language. The branch sub-ranges should ideally be individually mutually exclusive, and collectively they should cover the entire value range of the expression. As with the Condition Group, the branches are processed in the order stated in the definition, which allows overlapping value constraints on successive branches. An optional 'else' branch, represented as `DECISION_GROUP._else_branch_` of type `ADHOC_BRANCH` may be supplied to ensure exhaustive coverage of the value space, if it is not already covered by the defined `DECISION_GROUP._members_`.
 
 The following diagram shows a typical decision structure.
 
